<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gato..!!</string>
    <string name="hello_world">Juego gato mediante algoritmo min max</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="play">Jugar</string>
    <string name="stop">Cancelar</string>
    <string name="scores">Puntuajes</string>
    <string name="new_game">Juego Nuevo</string>
    <string name="new_player">Jugador Nuevo</string>
    <string name="settings">Configuraciones</string>
    <string name="level">Nivel</string>
    <string name="info">Acerca de</string>
    <string name="weak_ai">Facil</string>
    <string name="notSoStrong_ai">Medio</string>
    <string name="strong_ai">Dificil</string>
    <string name="god_ai">Modo Dios</string>
    <string name="empty">Salir</string>
    <string name="playGrid_name">Jugar</string>
    <string name="x_tile">X</string>
    <string name="o_tile">O</string>
    <string name="empty_tile">_</string>
    <string name="gm_ready">Listo</string>
    <string name="gm_computer_turn">Mi turno</string>
    <string name="gm_player_turn">Tu turno</string>
    <string name="gm_player_win">Ganaste..!!</string>
    <string name="gm_computer_win">Yo gano..!!</string>
    <string name="gm_tie">Es un empate..!!</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_about">Acerca de</string>
</resources>