<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.sagado.tictactoe.activities.Settings"
   android:orientation="vertical"
    android:onClick="sendLevel"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/new_player"
        android:onClick="Nuevo" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Nombre"
        android:id="@+id/tvname"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etname"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iBsave"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/ic_menu_save"
        android:visibility="invisible"
        android:onClick="Save" />

    <Button
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="settings"
        android:text="@string/level" />

    <RadioGroup
        android:id="@+id/radioGameAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/weakAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weak_ai"
            android:checked="true" />

        <RadioButton
            android:id="@+id/notSoStrongAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notSoStrong_ai" />

        <RadioButton
            android:id="@+id/strongAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strong_ai" />

        <RadioButton
            android:id="@+id/godAI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/god_ai" />

    </RadioGroup>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iBsaveLevel"
        android:src="@android:drawable/ic_menu_save"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:onClick="sendLevel" />

</LinearLayout>
